--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>ALGRENT</title>
 </head>
 <body>
-    
+    <header id="menu"><img src="../../../../Documents/logoAlgrent.webp" alt=""></header>
 </body>
 </html>
