--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" link="index.css">
     <title>ALGRENT</title>
 </head>
+
 <body>
-    <header id="menu"><img src="../../../../Documents/logoAlgrent.webp" alt=""></header>
+    <script link="index.js"></script>
 </body>
+
 </html>
