--- a/index.html
+++ b/index.html
@@ -8,18 +8,7 @@
 </head>
 
 <body>
-    <header id="menu">
-        <img src="../Algrent/logoAlgrent.webp" alt="" id="logoAlgrent">
-        <div class="dropDown">
-            <div>Om oss</div>
-            <div>Produkten</div>
-            <div>Beställ</div>
-            <div>FaQ</div>
-            <div>Rengör effektivt</div>
-
-        </div>
-
-    </header>
+    <header id="menu"><img src="../Algrent/logoAlgrent.webp" alt="" id="logoAlgrent"></header>
 </body>
 
 </html>
