--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-    <header id="menu"><img src="../Algrent/logoAlgrent.webp" alt="" id="logoAlgrent"></header>
+    <header id="menu">
+        <img src="../Algrent/logoAlgrent.webp" alt="" id="logoAlgrent">
+        <div class="dropDown">
+            <div>Om oss</div>
+            <div>Produkten</div>
+            <div>Beställ</div>
+            <div>FaQ</div>
+            <div>Rengör effektivt</div>
+        </div>
+    </header>
 </body>
 
 </html>
