--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
         <div class="dropDown">
             <div>Om oss</div>
             <div>Produkten</div>
-            <div>Beställ</div>
+            <div id="Form">Beställ</div>
             <div>FaQ</div>
             <div>Rengör effektivt</div>
         </div>
+        <script src="index.js"></script>
     </header>
+    <main>
+        <div id="formContainer">
+            <img src="" alt="">
+        </div>
+    </main>
 </body>
 
 </html>
