--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header id="menu">
-        <img src="../Algrent/logoAlgrent.webp" alt="" id="logoAlgrent">
+        <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
         <div class="dropDown">
             <div>Om oss</div>
             <div>Produkten</div>
