--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
             <div id="Form">Beställ</div>
             <div>FaQ</div>
             <div>Rengör effektivt</div>
-            
+
         </div>
     </header>
     <main></main>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        emailjs.init("drtTozGfAaoh1Xw4k"); // Ersätt med din EmailJS user ID
+    </script>
     <script src="index.js"></script>
 </body>
 
