--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main></main>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
-        emailjs.init("drtTozGfAaoh1Xw4k"); // Ersätt med din EmailJS user ID
+        emailjs.init(""); // Ersätt med din EmailJS user ID
     </script>
     <script src="index.js"></script>
 </body>
