--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="form.css">
     <title>ALGRENT</title>
+    
 </head>
 
 <body>
@@ -22,7 +23,23 @@
         </div>
     </header>
     <main></main>
+    <script type="text/javascript">
+        (function(){
+           emailjs.init({
+           publicKey: "drtTozGfAaoh1Xw4k",
+           });
+       })();
+</script>
     <script src="index.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+   
+
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        emailjs.init("drtTozGfAaoh1Xw4k"); // Ersätt med din EmailJS user ID
+    </script>
 </body>
 
 </html>
