Fixed HTML front page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div id="startingPage">
             <div id="startImg">
-                <img src="" alt="">
+                <img src="./img/frontPageImg.png" alt="">
             </div>
 
             <div id="infoFrontPage">
@@ -37,26 +37,27 @@
             <div class="containerInfo">
                 <div class="containerTxt">
                     <div class="SemiheaderFPage">Produkter</div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="brödTxt">En modern produkt</div>
+                    <div class="brödTxt">Biologiskt nedbrytbar</div>
+                    <div class="brödTxt">Optimerad för den nordiska miljön</div>
+                    <div class="brödTxt"> En produkt från Sverige</div>
                     <div class="läsMer">Läs mer →</div>
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img src="" alt="">
+                    <img src="./img/frontPageDemo.png" alt="">
                 </div>
             </div>
 
             <div class="containerInfo">
                 <div class="MellanstoraBilder">
-                    <img src="" alt="">
+                    <img src="./img/algrentProdukt.png" alt="">
                 </div>
 
                 <div class="containerTxt">
                     <div class="SemiheaderFPage">Algrent</div>
-                    <div>Algrent är ett modernt rengöringsmedel som är anpassat för den nordiska utemiljön.Produkten är
+                    <div class="brödTxt">Algrent är ett modernt rengöringsmedel som är anpassat för den nordiska
+                        utemiljön.Produkten är
                         mycket skonsam mot ytor och biologiskt nedbrytbart. Algrent är effektivt mot alger, mossa,
                         svartmögel och lavar.</div>
                     <div class="läsMer">Varför Algrent →</div>
@@ -67,12 +68,12 @@
             <div class="containerInfo">
                 <div class="containerTxt">
                     <div class="SemiheaderFPage">Kundrecensioner</div>
-                    <div>Hör vad våra kunder har att säga om produkterna</div>
+                    <div class="brödTxt">Hör vad våra kunder har att säga om produkterna</div>
                     <div class="läsMer">Läs Här → </div>
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img src="" alt="">
+                    <img src="./img/frontPageProduct.png" alt="">
                 </div>
             </div>
         </div>
