--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="containerInfo">
                 <div class="MellanstoraBilder">
-                    <img src="./img/algrentProdukt.png" alt="">
+                    <img src="./img/frontPageProduct.png" alt="">
                 </div>
 
                 <div class="containerTxt">
@@ -73,9 +73,13 @@
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img src="./img/frontPageProduct.png" alt="">
+                    <img src="./img/snubbe.png" alt="">
                 </div>
             </div>
+
+            <footer>
+
+            </footer>
         </div>
 
 
