--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="menu">
         <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
         <div class="dropDown">
-            <div>Om oss</div>
+            <div class="dropDownMenu">Om oss</div>
             <div>Produkten</div>
             <div id="Form">Beställ</div>
             <div>FaQ</div>
