--- a/index.html
+++ b/index.html
@@ -14,11 +14,26 @@
     <header id="menu">
         <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
         <div class="dropDown">
-            <div class="dropDownMenu">Om oss</div>
-            <div class="dropDownMenu">Produkten</div>
-            <div class="dropDownMenu" id="Form">Beställ</div>
-            <div class="dropDownMenu">FaQ</div>
-            <div class="dropDownMenu">Rengör effektivt</div>
+
+            <div class="menuItem">
+                <div class="dropDownMenu">Om oss</div>
+            </div>
+
+            <div class="menuItem">
+                <div class="dropDownMenu">Produkten</div>
+            </div>
+
+            <div class="menuItem">
+                <div class="dropDownMenu" id="Form">Beställ</div>
+            </div>
+
+            <div class="menuItem">
+                <div class="dropDownMenu">FaQ</div>
+            </div>
+
+            <div class="menuItem">
+                <div class="dropDownMenu">Rengör effektivt</div>
+            </div>
 
         </div>
     </header>
