Scroll reveal animation

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img src="./img/frontPageDemo.png" alt="">
+                    <img class="scroll-reveal" src="./img/frontPageDemo.png" alt="">
                 </div>
             </div>
 
             <div class="containerInfo">
                 <div class="MellanstoraBilder">
-                    <img src="./img/frontPageProduct.png" alt="">
+                    <img class="scroll-reveal" src="./img/frontPageProduct.png" alt="">
                 </div>
 
                 <div class="containerTxt">
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img src="./img/snubbe.png" alt="">
+                    <img class="scroll-reveal" src="./img/snubbe.png" alt="">
                 </div>
             </div>
 
