HTML Produkt sidan

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="produkt.css">
     <title>ALGRENT</title>
 
 </head>
@@ -20,7 +21,7 @@
             </div>
 
             <div class="menuItem">
-                <div class="dropDownMenu">Produkten</div>
+                <div id="produktKnapp" class="dropDownMenu">Produkten</div>
             </div>
 
             <div class="menuItem">
@@ -96,8 +97,6 @@
 
             </footer>
         </div>
-
-
     </main>
 
 </body>
