--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 
             <div class="menuItem">
                 <div class="dropDownMenu">Om oss</div>
+                <img class="arrow" src="img/dropDownArrow.png" alt="">
             </div>
 
             <div class="menuItem">
                 <div class="dropDownMenu">Produkten</div>
+                <img class="arrow" src="img/dropDownArrow.png" alt="">
             </div>
 
             <div class="menuItem">
@@ -29,10 +31,12 @@
 
             <div class="menuItem">
                 <div class="dropDownMenu">FaQ</div>
+                <img class="arrow" src="img/dropDownArrow.png" alt="">
             </div>
 
             <div class="menuItem">
                 <div class="dropDownMenu">Rengör effektivt</div>
+                <img class="arrow" src="img/dropDownArrow.png" alt="">
             </div>
 
         </div>
