Tog bort produkt sidan

--- a/index.html
+++ b/index.html
@@ -15,30 +15,9 @@
     <header id="menu">
         <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
         <div class="dropDown">
-
-            <div class="menuItem">
-                <div class="dropDownMenu">Om oss</div>
-                <img class="arrow" src="img/dropDownArrow.png" alt="">
-            </div>
-
-            <div class="menuItem">
-                <div id="produktKnapp" class="dropDownMenu">Produkten</div>
-            </div>
-
             <div class="menuItem">
                 <div class="dropDownMenu" id="Form">Beställ</div>
             </div>
-
-            <div class="menuItem">
-                <div class="dropDownMenu">FaQ</div>
-                <img class="arrow" src="img/dropDownArrow.png" alt="">
-            </div>
-
-            <div class="menuItem">
-                <div class="dropDownMenu">Rengör effektivt</div>
-                <img class="arrow" src="img/dropDownArrow.png" alt="">
-            </div>
-
         </div>
     </header>
 
@@ -96,11 +75,112 @@
                 </div>
             </div>
 
-            <footer>
+            <div id="containerProdukt">
+                <div id="containerTopProdukt">
+                    <div id="imgDiv">
+                        <img class="scroll-reveal" src="./img/algrentProdukt.png" alt="">
+                    </div>
+                    <div id="TopRightDiv">
+                        <h1> Algrent Proffs</h1>
+                        <p>Professionell sanering av alger, mossa & svartmögel</p>
+                        <div id="produktFakta">
+                            <h1>Snabb Produktfakta</h1>
+                            <div id="faktaContainer">
+                                <div id="fakta1">
+                                    <div>
+                                        <p>Räcker till</p>
+                                        <p>1l -> ca 100 m2 (21 l färdig lösning)</p>
+                                    </div>
+                                    <div>
+                                        <p>Miljö</p>
+                                        <p>Biologiskt nedbrytbar</p>
+                                    </div>
+                                </div>
+                                <div id="fakta2">
+                                    <div>
+                                        <p>Varaktighet</p>
+                                        <p>Upp till 5 år</p>
+                                    </div>
+                                    <div>
+                                        <p>Ytor</p>
+                                        <p>Tak, fasader, stenplattor m.m</p>
+                                    </div>
+                                </div>
 
-            </footer>
+                            </div>
+                        </div>
+                        <button>Hämta säkerhetsblad(PDF)</button>
+                    </div>
+                </div>
+                <div id="containerMidProdukt">
+
+                    <div id="midLeft">
+                        <div>
+                            <h1>Så fungerar Algrent Proffs</h1>
+                            <p>Algrent Proffs är utvecklad för effektiv sanering av alger, mossa, svartmögel och lavar.
+                                Med
+                                ett långvarigt skydd (upp till 5 år) lämpar den sig för tak, fasader, stenplattor och
+                                flera
+                                andra hårda ytor. Produkten är biologiskt nedbrytbar och lätt att applicera. </p>
+                        </div>
+                        <div>
+                            <h1>Fakta och användning</h1>
+                            <ul>
+                                <li>Passar på tak, fasader, stenplattor, tegel, trä m.m.</li>
+                                <li>Appliceras med lågtrycksspruta, borste eller pensel</li>
+                                <li>Bäst effekt vid temperatur över +5 °C och torrt väder</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h1>Användarinstruktion</h1>
+                            <p>Blanda enligt rekommendation på etiketten. Applicera jämnt över ytan och låt verka utan
+                                att
+                                spola bort. Alger och mossa dör inom några dagar; synligt resultat normalt inom 1–2
+                                veckor
+                                beroende på väder och mängd organiskt material. </p>
+                        </div>
+
+                    </div>
+                    <div class="productImages">
+                        <img class="productImg" src="img/frontPageDemo.png" alt="">
+                        <img class="productImg" src="img/frontPageImg.png" alt="">
+                    </div>
+                </div>
+                <div id="containerMidBotProdukt">
+                    <h1>Vanliga frågor</h1>
+                    <div>
+                        <div class="faqItem">
+                            <p>Hur appliceras produkten?</p>
+                            <div class="faqIcon">+</div>
+                            <div class="faqAnswer"> LALALAL</div>
+                        </div>
+                        <div class="faqItem">
+                            <p>Hur långt tid tar det innan man ser resultat</p>
+                            <div class="faqIcon">+</div>
+                            <div class="faqAnswer">FEFWF</div>
+                        </div>
+                        <div class="faqItem">
+                            <p>Är den skadlig för växter?</p>
+                            <div class="faqIcon">+</div>
+                            <div class="faqAnswer">WDOQDQ</div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h1>Säkerhet & nedladdningar</h1>
+                    <p>Se säkerhetsdatabladet för fullständiga anvisningar om hantering, förvaring och personlig
+                        skyddsutrustning.</p>
+                    <p>Hämta säkerhetsdatablad (PDF)</p>
+                </div>
+
+            </div>
+        </div>
+
         </div>
     </main>
+    <footer>
+
+    </footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
