Fixa vanliga frågor

--- a/index.html
+++ b/index.html
@@ -150,19 +150,68 @@
                     <h1>Vanliga frågor</h1>
                     <div>
                         <div class="faqItem">
-                            <p>Hur appliceras produkten?</p>
-                            <div class="faqIcon">+</div>
-                            <div class="faqAnswer"> LALALAL</div>
+                            <div class="faqItemHeader">
+                                <p class="brödTxt">Fungerar inte vanlig såpa lika bra som ALGRENT?</p>
+                                <div class="faqIcon">+</div>
+                            </div>
+                            <div class="faqAnswer">Nej det gör det inte.
+
+                                Såpa ta bort smutsen på ytan eftersom den innehåller tensider. Men påväxt som alger och
+                                mossa påverkas inte alls av tensider.
+
+
+                                När man rengör med en grövre borste och såpa, skrubbar man mekaniskt bort viss del av
+                                påväxten. Men alger finns kvar i ytans porer och kan fortsätta växa. ALGRENT tränger
+                                däremot ner i porerna och dödar påväxten omedelbart.</div>
+                        </div>
+
+                        <div class="faqItem">
+                            <div class="faqItemHeader">
+                                <p class="brödTxt">Kan jag använda ALGRENT på papptak och eternitplattor?</p>
+                                <div class="faqIcon">+</div>
+                            </div>
+                            <div class="faqAnswer">Absolut
+
+                                ALGRENT försvagar eller fräter inte på materialet. Dessa typer av takbeläggning har lågt
+                                glansvärde och därför är avspolning av taket inte nödvändigt efter 12 timmar. Låt regnet
+                                göra jobbet.</div>
+                        </div>
+
+                        <div class="faqItem">
+                            <div class="faqItemHeader">
+                                <p class="brödTxt">Varför ska jag inte tvätta fasaden med högtryckstvätt?</p>
+                                <div class="faqIcon">+</div>
+                            </div>
+                            <div class="faqAnswer">Även med lågt tryck, är risken att vatten tränger in bakom fasaden
+                                och ger fuktskador eller frostssprängning (tegel och puts). Ytan blir dessutom grövre
+                                och få större porer, vilket leder till att påväxt som svartmögel och alger få det
+                                lättare att få fäste framåt i tiden.
+
+
+                                Algrent Proffs tränger ner i ytans porer och dödar påväxtens rötter, utan att skada
+                                fasaden. Du får en fasad som är alg- och mögelfri i upp till 5 år.</div>
                         </div>
                         <div class="faqItem">
-                            <p>Hur långt tid tar det innan man ser resultat</p>
-                            <div class="faqIcon">+</div>
-                            <div class="faqAnswer">FEFWF</div>
-                        </div>
-                        <div class="faqItem">
-                            <p>Är den skadlig för växter?</p>
-                            <div class="faqIcon">+</div>
-                            <div class="faqAnswer">WDOQDQ</div>
+                            <div class="faqItemHeader">
+                                <p class="brödTxt">Vad är det för vita fläckarna på våra stenplattor?</p>
+                                <div class="faqIcon">+</div>
+                            </div>
+                            <div class="faqAnswer">Det som ni har fått är en lava som kallas för stenpest, kakelpest
+                                eller flisepest. Är mycket svårbehandlad och det tar tid att bli av med den. Algrent
+                                proffs är dock effektiv mot denna typ av lava.
+
+
+                                1. Blanda Algrent Proffs 1 till 10 (3% lösning)
+
+                                2. Appliceras blandningen på stenplattorna.
+
+                                3.Vänta i minst 48h och spolar därefter av stenplattorna med en högtryckstvätt.
+
+                                4. När ytan har torkat, upprepa du behandlingen på stenplattorna med en 3% lösning av
+                                Algrent proffs.
+
+                                5.Nu är stenpest neutraliserad. Men det kommer det ta upp till 4 månader innan de vita
+                                fläckarna har försvunnit helt.</div>
                         </div>
                     </div>
                 </div>
