--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <header id="menu">
-        <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
+        <a href="https://www.algrentb2b.com">
+            <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
+        </a>
         <div class="dropDown">
             <div class="menuItem">
                 <div class="dropDownMenu" id="Form">Beställ</div>
