--- a/index.html
+++ b/index.html
@@ -90,35 +90,21 @@
                     <img class="scroll-reveal" src="./img/algrentProdukt.png" alt="">
                 </div>
                 <div id="TopRightDiv">
-                    <h1> Algrent Proffs</h1>
-                    <p>Professionell sanering av alger, mossa & svartmögel</p>
+                    <div id="titelProduct">
+                    <h1> Algrent Proffs </h1>
+                    <p>Pris: 500kr</p>
+                    </div>
                     <div id="produktFakta">
                         <h1>Snabb Produktfakta</h1>
                         <div id="faktaContainer">
-                            <div id="fakta1">
-                                <div>
-                                    <p>Räcker till</p>
-                                    <p>1l -> ca 100 m2 (21 l färdig lösning)</p>
-                                </div>
-                                <div>
-                                    <p>Miljö</p>
-                                    <p>Biologiskt nedbrytbar</p>
-                                </div>
-                            </div>
-                            <div id="fakta2">
-                                <div>
-                                    <p>Varaktighet</p>
-                                    <p>Upp till 5 år</p>
-                                </div>
-                                <div>
-                                    <p>Ytor</p>
-                                    <p>Tak, fasader, stenplattor m.m</p>
-                                </div>
-                            </div>
-
+                            <p id="produktInfo">För effektiv sanering av alger och lavar.
+                                Långtidsverkande mot ny påväxt i upp till 5 år.
+                                Är optimerad för att effektivt ta bort alger på alla typer av ytor.
+                                Är biologiskt nedbrytbar
+                                1 liter koncentrat av ALGRENT räcker upp till 80 m². Ger upp till 16 liter högeffektivt rengöringsmedel.
+                            </p>
                         </div>
                     </div>
-                    <div id="prisDiv">Pris: 500kr</div>
                 </div>
             </div>
 
