--- a/index.html
+++ b/index.html
@@ -71,6 +71,90 @@
                 </div>
             </div>
 
+            <div id="containerFaktaAlgrent">
+                <div class="faktaRutor">
+                    <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
+                    <div class="faktaBrödTxt">En produkt för effektiv sanering av alger, lavar och mögel.
+                        ALGRENT är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.</div>
+                    <div class="brödTxt">Läs mer om fakta </div>
+                    <div class="faqIcon">+</div>
+                    <div class="faqAnswer">
+                        Blandningen kan användas på de flesta material som, trä, betong, sten, tegel, puts, plast, plåt,
+                        tyg, takpapp, etternit och kompositmaterial.
+
+                        För att applicera blandningen kan lågtryckspruta, borste, pensel eller roller användas.
+
+                        Bleker eller påverkar ej ytor som blandningen appliceras på. Vid hög glans på ytan rekommenderas
+                        att
+                        ytan sköljs av efter max 12 timmar, pga. blandningen kan matta ytan.
+
+                        Rekommendationen är att blandningen appliceras då yttertemperaturen är mellan 0 och 25 grader
+                        samt
+                        att det är regnfritt under 12 timmar efter applicering.
+                    </div>
+                </div>
+
+                <div class="faktaRutor">
+                    <div class="headerFaktaRutor">Handledning & Åtgång</div>
+                    <div class="faktaBrödTxt">Ytan som du ska behandla ska vara torr och större regnmängder ska inte
+                        förväntas de närmaste 12
+                        timmarna. Rekommenderad yttertemperatur är mellan 0 och 25 grader, för att ALGRENT inte ska
+                        avdunsta för snabbt.</div>
+                    <div class="brödTxt">Läs mer om handledning</div>
+                    <div class="faqIcon">+</div>
+                    <div class="faqAnswer">
+                        Utförande
+                        <br>
+                        1.Späds 1 del ALGRENT + 15 delar vatten vid normal behandling. För svår påväxt som svartmögel
+                        och
+                        stenpest rekommenderas produkten ALGRENT PROFFS.
+                        <br>
+                        2. Applicera blandningen på ytan med lågtryckspruta, borste, pensel eller roller så att det
+                        rinna
+                        lätt från ytan.
+                        <br>
+                        3. Efter 12 timmar har blandningen verkat klart och trängt ner i ytans porer. Påväxten är nu
+                        död.
+                        <br>
+                        3b. Om ytan har hög glans, rekommenderar vi att man spola av ytan efter 12 timmar, eftersom
+                        annars
+                        finns risk för att ytan mattas något.
+                        <br>
+                        4. Nu är allt klart. Väder och vind kommer spola bort den döda påväxten så småningom. Påväxt som
+                        mossa och lavar kan ta upp till 1 år innan regnet spolar bort den.
+                        <br>
+                        4b. Vill du få bort den döda påväxten tidigare, kan du spola av den behandlade ytan med vatten
+                        (trädgårdslang eller högtryckstvätt). Vänta då minst 48h efter behandlingen att göra detta.
+                    </div>
+                </div>
+
+                <div class="faktaRutor">
+                    <div class="headerFaktaRutor">Hur hjälper Algrent dig?</div>
+                    <div class="faktaBrödTxt">ALGRENT innehåller Bensaltensid. Detta verksamma ämne är mycket
+                        effektivt
+                        för att neutralisera
+                        påväxt som alger och lavar. Produkten är biologiskt nedbrytbar och påverkar inte materialet
+                        eller bleker ytan.</div>
+                    <div class="brödTxt">Läs mer om Algrent</div>
+                    <div class="faqIcon">+</div>
+                    <div class="faqAnswer">
+                        En produkt för effektiv sanering av alger, lavar och mögel.
+                        ALGRENT är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.
+                        <br>
+                        Lika effektiv mot påväxt som marknadsledande produkt. Men 63% billigare.
+                        ALGRENT ger en 1% lösning av bensaltensid vid rekommenderad blandning precis som marknadsledande
+                        produkt. Eftersom produkten är högkoncentrerad har du möjlighet att optimera den ytterliga vid
+                        mer
+                        koncentrerad påväxt.
+                        <br>
+                        Långtidsverkande mot ny påväxt i upp till 5 år.
+                        ALGRENT tränger ner i ytans porer och neutraliserar påväxten på djupet. Detta ger ett skydd mot
+                        att
+                        ny påväxt blir synlig i upp till 5 år.
+                    </div>
+                </div>
+            </div>
+
             <div class="containerInfo">
                 <div class="containerTxt">
                     <div class="SemiheaderFPage">Produkter</div>
@@ -189,9 +273,11 @@
                     <div id="midLeft">
                         <div>
                             <h1>Så fungerar Algrent Proffs</h1>
-                            <p>Algrent Proffs är utvecklad för effektiv sanering av alger, mossa, svartmögel och lavar.
+                            <p>Algrent Proffs är utvecklad för effektiv sanering av alger, mossa, svartmögel och
+                                lavar.
                                 Med
-                                ett långvarigt skydd (upp till 5 år) lämpar den sig för tak, fasader, stenplattor och
+                                ett långvarigt skydd (upp till 5 år) lämpar den sig för tak, fasader, stenplattor
+                                och
                                 flera
                                 andra hårda ytor. Produkten är biologiskt nedbrytbar och lätt att applicera. </p>
                         </div>
@@ -205,7 +291,8 @@
                         </div>
                         <div>
                             <h1>Användarinstruktion</h1>
-                            <p>Blanda enligt rekommendation på etiketten. Applicera jämnt över ytan och låt verka utan
+                            <p>Blanda enligt rekommendation på etiketten. Applicera jämnt över ytan och låt verka
+                                utan
                                 att
                                 spola bort. Alger och mossa dör inom några dagar; synligt resultat normalt inom 1–2
                                 veckor
@@ -228,11 +315,13 @@
                             </div>
                             <div class="faqAnswer">Nej det gör det inte.
 
-                                Såpa ta bort smutsen på ytan eftersom den innehåller tensider. Men påväxt som alger och
+                                Såpa ta bort smutsen på ytan eftersom den innehåller tensider. Men påväxt som alger
+                                och
                                 mossa påverkas inte alls av tensider.
 
 
-                                När man rengör med en grövre borste och såpa, skrubbar man mekaniskt bort viss del av
+                                När man rengör med en grövre borste och såpa, skrubbar man mekaniskt bort viss del
+                                av
                                 påväxten. Men alger finns kvar i ytans porer och kan fortsätta växa. ALGRENT tränger
                                 däremot ner i porerna och dödar påväxten omedelbart.</div>
                         </div>
@@ -244,8 +333,10 @@
                             </div>
                             <div class="faqAnswer">Absolut
 
-                                ALGRENT försvagar eller fräter inte på materialet. Dessa typer av takbeläggning har lågt
-                                glansvärde och därför är avspolning av taket inte nödvändigt efter 12 timmar. Låt regnet
+                                ALGRENT försvagar eller fräter inte på materialet. Dessa typer av takbeläggning har
+                                lågt
+                                glansvärde och därför är avspolning av taket inte nödvändigt efter 12 timmar. Låt
+                                regnet
                                 göra jobbet.</div>
                         </div>
 
@@ -254,8 +345,10 @@
                                 <p class="brödTxt">Varför ska jag inte tvätta fasaden med högtryckstvätt?</p>
                                 <div class="faqIcon">+</div>
                             </div>
-                            <div class="faqAnswer">Även med lågt tryck, är risken att vatten tränger in bakom fasaden
-                                och ger fuktskador eller frostssprängning (tegel och puts). Ytan blir dessutom grövre
+                            <div class="faqAnswer">Även med lågt tryck, är risken att vatten tränger in bakom
+                                fasaden
+                                och ger fuktskador eller frostssprängning (tegel och puts). Ytan blir dessutom
+                                grövre
                                 och få större porer, vilket leder till att påväxt som svartmögel och alger få det
                                 lättare att få fäste framåt i tiden.
 
@@ -279,10 +372,12 @@
 
                                 3.Vänta i minst 48h och spolar därefter av stenplattorna med en högtryckstvätt.
 
-                                4. När ytan har torkat, upprepa du behandlingen på stenplattorna med en 3% lösning av
+                                4. När ytan har torkat, upprepa du behandlingen på stenplattorna med en 3% lösning
+                                av
                                 Algrent proffs.
 
-                                5.Nu är stenpest neutraliserad. Men det kommer det ta upp till 4 månader innan de vita
+                                5.Nu är stenpest neutraliserad. Men det kommer det ta upp till 4 månader innan de
+                                vita
                                 fläckarna har försvunnit helt.</div>
                         </div>
                     </div>
