--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 
             <div id="containerFaktaAlgrent">
                 <div class="faktaRutor">
+                    <div class="faqItem">
                     <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
                     <div class="faktaBrödTxt">En produkt för effektiv sanering av alger, lavar och mögel.
                         Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.</div>
@@ -174,8 +175,10 @@
                         att det är regnfritt under 12 timmar efter applicering.
                     </div>
                 </div>
+            </div>
 
                 <div class="faktaRutor">
+                    <div class="faqItem">
                     <div class="headerFaktaRutor">Handledning & Åtgång</div>
                     <div class="faktaBrödTxt">Ytan som du ska behandla ska vara torr och större regnmängder ska inte
                         förväntas de närmaste 12
@@ -210,8 +213,10 @@
                         (trädgårdslang eller högtryckstvätt). Vänta då minst 48h efter behandlingen att göra detta.
                     </div>
                 </div>
+            </div>
 
                 <div class="faktaRutor">
+                    <div class="faqItem">
                     <div class="headerFaktaRutor">Hur hjälper Algrent dig?</div>
                     <div class="faktaBrödTxt">Algrent innehåller Bensaltensid. Detta verksamma ämne är mycket
                         effektivt
@@ -239,6 +244,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
             <div class="containerInfo">
                 <div class="containerTxt">
